tests/fixtures/invalid/list_add_none.py
# Cannot add List[int] and None
x: list[int] = [1, 2, 3] + None
